--- a/templates/content/faq.html.twig
+++ b/templates/content/faq.html.twig
@@ -16,8 +16,8 @@
                 <h2>Privacy</h2>
 
                 <ul>
-                    <li id="data-collect">
-                        <details>
+                    <li>
+                        <details id="data-collect">
                             <summary>
                                 <h3>
                                     <p><a href="#data-collect"><i class="fas fa-link"></i></a>What do you do with the
@@ -37,8 +37,8 @@
                             </p>
                         </details>
                     </li>
-                    <li id="data-retention">
-                        <details>
+                    <li>
+                        <details id="data-retention">
                             <summary>
                                 <h3>
                                     <p><a href="#data-retention"><i class="fas fa-link"></i></a>How long do you keep the
@@ -57,8 +57,8 @@
                 <h2>Using the app</h2>
 
                 <ul>
-                    <li id="howto">
-                        <details>
+                    <li>
+                        <details id="howto">
                             <summary>
                                 <h3>
                                     <p><a href="#howto"><i class="fas fa-link"></i></a>How does it work?</p>
@@ -128,8 +128,8 @@
                         </details>
                     </li>
 
-                    <li id="#secret-repartition">
-                        <details>
+                    <li>
+                        <details id="secret-repartition">
                             <summary>
                                 <h3>
                                     <p><a href="#secret-repartition"><i class="fas fa-link"></i></a>How can I retrieve
@@ -145,7 +145,7 @@
                             <div class="is-center">
                                 <img class="img-border" src="{{ asset('images/app-spoil.png') }}"
                                      style="max-width: 80%"
-                                     alt="The customization form"/>
+                                     alt="Retrieving the repartition"/>
                             </div>
 
                             <p>
@@ -156,11 +156,11 @@
                             </p>
                         </details>
                     </li>
-                    <li id="custom-message">
-                        <details>
+                    <li>
+                        <details id="custom-message">
                             <summary>
                                 <h3>
-                                    <p><a><i class="fas fa-link"></i></a>Can I add a custom message for some members ?
+                                    <p><a href="#custom-message"><i class="fas fa-link"></i></a>Can I add a custom message for some members ?
                                     </p>
                                 </h3>
                             </summary>
@@ -169,14 +169,14 @@
                                 Yes! If you need to specify some information for some users in particular (e.g:
                                 allergies, address), you can easily do so! <br/>
                                 On the customization step,
-                                you will see a list of all the participating users, and each of them will have a field
+                                you will see a list of all the participants, and each of them will have a field
                                 next to their name where you can enter the information :
                             </p>
 
                             <div class="is-center">
                                 <img class="img-border" src="{{ asset('images/step-notes.png') }}"
                                      style="max-width: 80%"
-                                     alt="The customization form"/>
+                                     alt="Adding notes to some participants"/>
                             </div>
 
                             <p>
@@ -184,8 +184,8 @@
                             </p>
                         </details>
                     </li>
-                    <li id="odd">
-                        <details>
+                    <li>
+                        <details id="odd">
                             <summary>
                                 <h3>
                                     <p><a href="#odd"><i class="fas fa-link"></i></a>Will the app work with an odd
@@ -198,8 +198,8 @@
                             </p>
                         </details>
                     </li>
-                    <li id="avoid-association">
-                        <details>
+                    <li>
+                        <details id="avoid-association">
                             <summary>
                                 <h3>
                                     <p><a href="#avoid-association"><i class="fas fa-link"></i></a>Can I make sure
@@ -213,8 +213,8 @@
                             </p>
                         </details>
                     </li>
-                    <li id="new-participant">
-                        <details>
+                    <li>
+                        <details id="new-participant">
                             <summary>
                                 <h3>
                                     <p><a href="#new-participant"><i class="fas fa-link"></i></a>Can I add a new
@@ -229,8 +229,8 @@
                             </p>
                         </details>
                     </li>
-                    <li id="big-team">
-                        <details>
+                    <li>
+                        <details id="big-team">
                             <summary>
                                 <h3>
                                     <p><a href="#big-team"><i class="fas fa-link"></i></a>Will the app work with team
@@ -266,8 +266,8 @@
                 <h2>Discord</h2>
 
                 <ul>
-                    <li id="discord-server-dm">
-                        <details>
+                    <li>
+                        <details id="discord-server-dm">
                             <summary>
                                 <h3>
                                     <p><a href="#discord-server-dm"><i class="fas fa-link"></i></a>What to do when a
@@ -289,7 +289,7 @@
                                 to <strong>change their privacy settings</strong> on this server. See the example below:
                             </p>
                             <div class="is-center">
-                                <img src="{{ asset('images/discord-privacy-settings.gif') }}"
+                                <img src="{{ asset('images/discord-privacy-settings.gif') }}" style="max-width: 80%"
                                      alt="How to change the privacy settings on Discord"/>
                             </div>
                             <p>
@@ -299,8 +299,8 @@
                             </p>
                         </details>
                     </li>
-                    <li id="invalid-user">
-                        <details>
+                    <li>
+                        <details id="invalid-user">
                             <summary>
                                 <h3>
                                     <p><a href="#invalid-user"><i class="fas fa-link"></i></a>Why did someone receive
@@ -320,8 +320,8 @@
                 <h2>Zoom.us</h2>
 
                 <ul>
-                    <li id="zoom-install">
-                        <details>
+                    <li>
+                        <details id="zoom-install">
                             <summary>
                                 <h3>
                                     <p><a href="#zoom-install"><i class="fas fa-link"></i></a>How to install the app on
@@ -342,8 +342,8 @@
                                 <a href="#howto">the main How-To</a> to learn how to use it.</p>
                         </details>
                     </li>
-                    <li id="zoom-uninstall">
-                        <details>
+                    <li>
+                        <details id="zoom-uninstall">
                             <summary>
                                 <h3>
                                     <p><a href="#zoom-uninstall"><i class="fas fa-link"></i></a>Uninstalling from your
@@ -367,8 +367,8 @@
                 <h2>Miscellaneous</h2>
 
                 <ul>
-                    <li id="hall-of-fame">
-                        <details>
+                    <li>
+                        <details id="hall-of-fame">
                             <summary>
                                 <h3>
                                     <p><a href="#hall-of-fame"><i class="fas fa-link"></i></a>How can I add my company /
@@ -388,8 +388,23 @@
             </div>
         </div>
     </div>
-{% endblock content %}
 
+    <script type="text/javascript" nonce="{{ csp_nonce('script') }}">
+        let details = ''
+        function openTarget() {
+            let hash = location.hash.substring(1);
+            if (hash) {
+                details = document.getElementById(hash);
+            }
+            if (details && details.tagName.toLowerCase() === 'details') {
+                details.open = true;
+            }
+        }
+
+        window.addEventListener('hashchange', openTarget);
+        openTarget();
+    </script>
+{% endblock content %}
 {% block contact %}
     <a href="mailto:hello@secret-santa.team" class="support-link"><i class="fas fa-envelope"></i> Did not find an answer
         to your question? Contact us!</a>
