--- a/templates/santa/application/participants_slack.html.twig
+++ b/templates/santa/application/participants_slack.html.twig
@@ -4,11 +4,11 @@
 
 {% import _self as current %}
 
-{% macro userSummary(user) %}
+{% macro userSummary(userForm, user) %}
     <span class="user-summary">
         <img src="{{ user.extra.image }}" alt=""/>
         <span>{{ user.extra.nickname }}</span>
-        <span data-uncheck-user="user-{{ user.identifier }}" class="fas fa-times" title="Unselect this user"></span>
+        <span data-uncheck-user="{{ userForm.vars.id }}" class="fas fa-times" title="Unselect this user"></span>
     </span>
 {% endmacro %}
 
@@ -22,7 +22,7 @@
     >
 
         <div class="data-summary"
-             data-summary="{{ current.userSummary(user)|escape('html_attr')|raw }}">
+             data-summary="{{ current.userSummary(userForm, user)|escape('html_attr')|raw }}">
             {{ form_widget(userForm, {'attr': {
                 'data-identifier': user.identifier
             }}
