Remove partial support of Zoom as it's not user-ready

--- a/templates/_seo.html.twig
+++ b/templates/_seo.html.twig
@@ -1,5 +1,5 @@
-{% set title = title|default('Secret Santa App - The Secret Santa bot for your Slack, Discord or Zoom.us team') %}
-{% set description = description|default('A free application to throw Secret Santa with your team on Slack, Discord or Zoom.us and share gifts during the holidays!') %}
+{% set title = title|default('Secret Santa App - The Secret Santa bot for your Slack or Discord team') %}
+{% set description = description|default('A free application to throw Secret Santa with your team on Slack or Discord and share gifts during the holidays!') %}
 
 <title>{{ title }}</title>
 <meta name="description" content="{{ description }}">
