--- a/templates/content/faq.html.twig
+++ b/templates/content/faq.html.twig
@@ -239,17 +239,15 @@
                             </summary>
                             <p>
                                 The first step in our application is to retrieve all the users on your Slack workspace
-                                / Discord server / Zoom.us Chat - yes we retrieve all the users to allow you to select
+                                / Discord server - yes we retrieve all the users to allow you to select
                                 the
                                 ones that will participate to your Secret Santa.
                             </p>
                             <p>
-                                When your team is really big, Slack, Discord or Zoom.us APIs can fail to send us all the
+                                When your team is really big, Slack or Discord API can fail to send us all the
                                 users in a
                                 reasonable duration. That means you will not be able to start a Secret Santa.
                                 A possible workaround would be to create a new Slack workspace / Discord server /
-                                Zoom.us
-                                Chat
                                 with only the participants.
                             </p>
                             <p>
@@ -313,53 +311,6 @@
                                 the
                                 conversation on the Discord desktop app (for Windows, MacOS or Linux) or on the website.
                             </p>
-                        </details>
-                    </li>
-                </ul>
-
-                <h2>Zoom.us</h2>
-
-                <ul>
-                    <li>
-                        <details id="zoom-install">
-                            <summary>
-                                <h3>
-                                    <p><a href="#zoom-install"><i class="fas fa-link"></i></a>How to install the app on
-                                        Zoom.us?</p>
-                                </h3>
-                            </summary>
-                            <p>
-                                Go to <a href="{{ path('homepage') }}">Secret-Santa homepage</a> and click "Run on
-                                Zoom".
-                                You will be asked for permissions to use your Zoom Account:
-                            </p>
-                            <div class="is-center">
-                                <img class="img-border" src="{{ asset('images/zoom-install.png') }}" width="473px"
-                                     alt="Install on Zoom"/>
-                            </div>
-                            <p>Those permissions are <strong>mandatory</strong> to use Secret Santa.</p>
-                            <p>You will be then redirected to the Secret Santa screen, please refer to
-                                <a href="#howto">the main How-To</a> to learn how to use it.</p>
-                        </details>
-                    </li>
-                    <li>
-                        <details id="zoom-uninstall">
-                            <summary>
-                                <h3>
-                                    <p><a href="#zoom-uninstall"><i class="fas fa-link"></i></a>Uninstalling from your
-                                        Zoom Account</p>
-                                </h3>
-                            </summary>
-                            <p>
-                                All you need to do is revoke the App from your Zoom.us account here: <a
-                                        href="https://marketplace.zoom.us/user/installed">https://marketplace.zoom.us/user/installed</a>.
-                            </p>
-                            <div class="is-center">
-                                <img class="img-border" src="{{ asset('images/zoom-uninstall.png') }}" width="436px"
-                                     alt="Uninstall Zoom"/>
-                            </div>
-                            <p>There is no other required actions, <strong>we do not store any data</strong> about your
-                                organisation.</p>
                         </details>
                     </li>
                 </ul>
