--- a/templates/content/homepage.html.twig
+++ b/templates/content/homepage.html.twig
@@ -23,11 +23,12 @@
                     <a class="action hvr-buzz action-discord" href="{{ path('run', { application: 'discord' }) }}">
                         <i class="custom-fa-discord"></i> Run on Discord
                     </a>
-                    <a class="action hvr-buzz action-zoom" href="{{ path('zoom_pre_auth_warning') }}">
-                        <i class="custom-fa-zoom"></i> Run on Zoom
-                        <sup style="position:absolute;top:8px;right:4px;font-size: 0.6em;">beta</sup>
-                    </a>
                 </div>
+
+                <p>
+                    Wanna use <a href="https://github.com/jolicode/secret-santa/issues/140">Google Chat</a>? <a href="https://github.com/jolicode/secret-santa/issues/142">Zoom.us</a>?
+                    <a href="https://github.com/jolicode/secret-santa/issues/151">Matrix</a>? Help is welcome!
+                </p>
             </div>
         </div>
 
