--- a/templates/santa/finish.html.twig
+++ b/templates/santa/finish.html.twig
@@ -66,7 +66,7 @@
                     </div>
                 {% endfor %}
 
-                {% if secretSanta.application == 'discord' %}
+                {% if secretSanta.config.application == 'discord' %}
                     <p>
                         If a user <strong>does not allow to receive private message on a server</strong>, Discord will prevent us to send
                         them a message. You need to ask them to <strong>change their privacy settings</strong> on this server.
