Add FAQ entry about discord bot always offline

--- a/templates/content/faq.html.twig
+++ b/templates/content/faq.html.twig
@@ -265,6 +265,19 @@
 
                 <ul>
                     <li>
+                        <details id="discord-bot-offline" open="">
+                            <summary>
+                                <h3>
+                                    <p><a href="#discord-bot-offline"><i class="fas fa-link"></i></a>Why is the bot always offline?</p>
+                                </h3>
+                            </summary>
+                            <p>The bot is only there to send private message to each participant. You won't interact
+                               with it directly, so it's always offline.</p>
+                            <p>To start a new Secret Santa in a Discord server, just go on <a href="{{ path('homepage') }}">the homepage</a>,
+                               click on "Run on Discord" button, and follow the different steps.</p>
+                        </details>
+                    </li>
+                    <li>
                         <details id="discord-server-dm">
                             <summary>
                                 <h3>
