Clean up, add avatar support, better message formatting

--- a/templates/error.html.twig
+++ b/templates/error.html.twig
@@ -6,7 +6,7 @@
             <h2>An unexpected error happened!</h2>
 
             <p>
-                Our application was not able to do what you asked for. That's unfortunate and we hope it didn't break Christmas.
+                Our application was not able to do what you asked for. That's unfortunate, and we hope it didn't break Christmas.
                 Feel free to <a href="mailto:hello@secret-santa.team">contact us</a> if you need assistance!
             </p>
 
