--- a/templates/content/faq.html.twig
+++ b/templates/content/faq.html.twig
@@ -208,7 +208,7 @@
                                 </h3>
                             </summary>
                             <p>
-                                No, the association is purely random so you cannot do that with our application.
+                                No, the association is purely random, so you cannot do that with our application.
                                 An alternative could be to launch 2 Secret Santa with two groups of people.
                             </p>
                         </details>
@@ -222,7 +222,7 @@
                                 </h3>
                             </summary>
                             <p>
-                                No, you can't. However, you can still start a new Secret Santa. We advice you to add a
+                                No, you can't. However, you can still start a new Secret Santa. We advise you to add a
                                 note
                                 in the
                                 message mentioning that this new draw cancels and replaces the old one.
@@ -241,10 +241,10 @@
                                 The first step in our application is to retrieve all the users on your Slack workspace
                                 / Discord server - yes we retrieve all the users to allow you to select
                                 the
-                                ones that will participate to your Secret Santa.
+                                ones that will participate in your Secret Santa.
                             </p>
                             <p>
-                                When your team is really big, Slack or Discord API can fail to send us all the
+                                When your team is massive, Slack or Discord API can fail to send us all the
                                 users in a
                                 reasonable duration. That means you will not be able to start a Secret Santa.
                                 A possible workaround would be to create a new Slack workspace / Discord server /
@@ -289,7 +289,7 @@
                             <p>
                                 Discord has an option to allow someone to not receive private message on a their server
                                 they
-                                belongs to.
+                                belong to.
                             </p>
                             <p>
                                 If you throw a Secret Santa in a server where a user does not allow to receive private
