Code review corrections, mostly empty removal :p

--- a/templates/santa/application/participants_webex.html.twig
+++ b/templates/santa/application/participants_webex.html.twig
@@ -22,11 +22,9 @@
     >
 
         <div class="data-summary"
-             data-summary="{{ current.userSummary(userForm, user)|escape('html_attr')|raw }}">
-            {{ form_widget(userForm, {'attr': {
-                'data-identifier': user.identifier
-            }}
-            ) }}
+             data-summary="{{ current.userSummary(userForm, user)|escape('html_attr')|raw }}"
+        >
+            {{ form_widget(userForm, {'attr': { 'data-identifier': user.identifier }}) }}
         </div>
 
         {% if user.extra.image %}
