--- a/templates/content/homepage.html.twig
+++ b/templates/content/homepage.html.twig
@@ -23,10 +23,13 @@
                     <a class="action hvr-buzz action-discord" href="{{ path('run', { application: 'discord' }) }}">
                         <i class="custom-fa-discord"></i> Run on Discord
                     </a>
+                    <a class="action hvr-buzz action-webex" href="{{ path('run', { application: 'webex' }) }}">
+                        <i class="custom-fa-webex"></i> Run on Webex <sup>new!</sup>
+                    </a>
                 </div>
 
                 <p>
-                    Wanna use <a href="https://github.com/jolicode/secret-santa/issues/140">Google Chat</a>? <a href="https://github.com/jolicode/secret-santa/issues/142">Zoom.us</a>?
+                    Want to use <a href="https://github.com/jolicode/secret-santa/issues/140">Google Chat</a>? <a href="https://github.com/jolicode/secret-santa/issues/142">Zoom.us</a>?
                     <a href="https://github.com/jolicode/secret-santa/issues/151">Matrix</a>? Help is welcome!
                 </p>
             </div>
@@ -64,7 +67,7 @@
                 </div>
                 <div class="step-feature-text">
                     <h3>1. Connect to Your Application</h3>
-                    <p>Click on one of the "Run on Slack" or "Run on Discord" buttons above to authorize Secret Santa to access your account.</p>
+                    <p>Click on one of the "Run on Slack", "Run on Discord" or "Run on Webex" buttons above to authorize Secret Santa to access your account.</p>
                 </div>
             </section>
 
