feat(webex): Add a dedicated landing page with better info for Webex

--- a/templates/content/faq.html.twig
+++ b/templates/content/faq.html.twig
@@ -265,7 +265,7 @@
 
                 <ul>
                     <li>
-                        <details id="discord-bot-offline" open="">
+                        <details id="discord-bot-offline">
                             <summary>
                                 <h3>
                                     <p><a href="#discord-bot-offline"><i class="fas fa-link"></i></a>Why is the bot always offline?</p>
@@ -324,6 +324,31 @@
                                 the
                                 conversation on the Discord desktop app (for Windows, MacOS or Linux) or on the website.
                             </p>
+                        </details>
+                    </li>
+                </ul>
+
+                <h2>Webex</h2>
+
+                <ul>
+                    <li>
+                        <details id="webex-account">
+                            <summary>
+                                <h3>
+                                    <p><a href="#webex-account"><i class="fas fa-link"></i></a>What kind of Webex account is needed?</p>
+                                </h3>
+                            </summary>
+                            <p>The Webex by Cisco integration requires a Free or Paid Webex account.</p>
+                        </details>
+                    </li>
+                    <li>
+                        <details id="webex-setup">
+                            <summary>
+                                <h3>
+                                    <p><a href="#webex-setup"><i class="fas fa-link"></i></a>How to add the Webex integration?</p>
+                                </h3>
+                            </summary>
+                            <p>Head over our <a href="{{ path('webex_landing') }}">dedicated Webex tutorial</a> to learn more about adding Secret Santa on Webex.</p>
                         </details>
                     </li>
                 </ul>
