--- a/templates/content/homepage.html.twig
+++ b/templates/content/homepage.html.twig
@@ -59,7 +59,7 @@
         </div>
 
         <div class="content how-block">
-            <h2 class="content-head is-center">How does it works?</h2>
+            <h2 class="content-head is-center">How does it work?</h2>
 
             <section class="step-feature">
                 <div class="step-feature-image">
