feat(webex): Handle messages sent to the bot

--- a/templates/content/faq.html.twig
+++ b/templates/content/faq.html.twig
@@ -351,6 +351,18 @@
                             <p>Head over our <a href="{{ path('webex_landing') }}">dedicated Webex tutorial</a> to learn more about adding Secret Santa on Webex.</p>
                         </details>
                     </li>
+                    <li>
+                        <details id="webex-revoke">
+                            <summary>
+                                <h3>
+                                    <p><a href="#webex-revoke"><i class="fas fa-link"></i></a>How do I revoke the permission I gave?</p>
+                                </h3>
+                            </summary>
+                            <p>We are not storing any token or permission - so consider your Webex account already free from all ties with Secret Santa.</p>
+                            <p>Once used, this application will never send you or your contact any message
+                                anymore - it can only do that if you <a href="{{ path('webex_landing') }}">restart the app</a>.</p>
+                        </details>
+                    </li>
                 </ul>
 
                 <h2>Miscellaneous</h2>
